@@ -98,7 +98,7 @@ $(outdir)/lilypond/lilypond.html: $(outdir)/lilypond.texi
 	perl -i~ -pe 's!../lilypond-internals!lilypond-internals/!g' $(outdir)/lilypond.html
 	rm -f $(outdir)/lilypond/*.png $(outdir)/lilypond/*.ly
 # symbolic links to save space 
-	-ln -sf $(outdir)/*.png $(outdir)/*.ly $(outdir)/lilypond/
+	(cd $(outdir)/lilypond/ ; ln -sf ../*.png ../*.ly . )
 
 $(outdir)/lilypond-internals/lilypond-internals.html: $(outdir)/lilypond-internals.texi
 	mkdir -p $(dir $@)
